16-Gateway-API/grpc-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server 
    spec:
      containers:
        - name: grpc-server 
          image: ghcr.io/nmdra/grpc-hello-server:latest
          imagePullPolicy: IfNotPresent      # Force using local image
          ports:
            - containerPort: 50051 

---

apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
