16-Gateway-API/whoami-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-canary
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
      version: canary
  template:
    metadata:
      labels:
        app: whoami
        version: canary
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:latest   
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: whoami-canary
  namespace: default
spec:
  selector:
    app: whoami
    version: canary
  ports:
  - port: 80
    targetPort: 80
