16-Gateway-API/Httptroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-httproute
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http 
    kind: Gateway
    namespace: traefik
  hostnames:
  - whoami.localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: whoami
      namespace: default
      port: 80
